# Tasks-Sem2

Sample-Test1/: test.cpp
Task1Sem2/: Task1.cpp  Task1.h  main.cpp
Task2sem2/: Point.cpp  Point.h  Task2.cpp  Task2.h  Triangle.cpp  Triangle.h  main.cpp
Task3sem2/: CMakeLists.txt  PiecewiseLinearApproximation.cpp  PiecewiseLinearApproximation.h  Point.cpp  Point.h  README.md  Segment.cpp  Segment.h  Task3sem2.sln  Task3sem2.vcxproj  Task3sem2.vcxproj.filters  geometry_defines.h  main.cpp  tests.cpp
Task4Sem2/: Task4Sem2.sln  Task4Sem2.vcxproj
Task4Sem2/ConsoleApp/: main.cpp
Task4Sem2/LinkedListLib/: LinkedList.cpp  LinkedList.h
Task4Sem2/LinkedListTests/: LinkedListTests.cpp
